Updates made on 04Aug

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,17 @@
-initial.data=src/main/resources/countries.txt
+initial.data=src/main/resources/budget.txt
 server.port=8080
 
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
 
-spring.datasource.url=jdbc:h2:mem:countries_db
+spring.datasource.url=jdbc:h2:mem:budgets_db
 spring.datasource.username=sa
 spring.datasource.password=password
+
+spring.datasource.driver-class-name=org.h2.Driver
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.hibernate.ddl-auto=create
+logging.level.org.hibernate.SQL=ERROR
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+logging.level.org.springframework.boot.autoconfigure=INFO
